# altair_tools

./: .gitignore  CMakeLists.txt  CPM62.SYS  CTestTestfile.cmake  LICENSE  README.md  acopy.asm  altairdsk.c  altairdsk_main  altairdsk_osx.c  altairls.c  bios.hex  build.zig  build.zig.zon  cpm22.asm  dump.asm  fmt.bak  hd_sexrtor_offsets.xlsx  search.py  sector_offsets.xlsx  wm.hlp
.github/workflows/: cmake-multi-platform.yml
adgui/: build.zig  build.zig.zon
adgui/src/: ButtonHandler.zig  CommandState.zig  commands.zig  main.zig  terminal_theme.zig  theme.zon
docs/: ADGUI.md  altair_8in_fdd.md
legacy/: CMakeLists.txt  altairdsk.c
src/: commands.zig  console.zig  directory_table.zig  disk_image.zig  disk_image_tests.zig  disk_types.zig  lib.zig  main.zig  tests.zig
src/test_disks/: 1.5mb_fmt.dsk  32k.txt  8in_dirs.dsk  8in_fmt_alt.dsk  8in_full.dsk  erase_post.dsk  erase_pre.dsk  filenames.dsk  lgdsdd_64dirs.dsk  lgdsdd_dirs.dsk  lgdsdd_fmt.dsk  lgdsdd_full.dsk  lgdssd_fmt.dsk  lgdssd_full.dsk  lgssdd_fmt.dsk  lgssdd_full.dsk  lgsssd_fmt.dsk  lgsssd_full.dsk  non_contiguous.dsk  smdsdd_fmt.dsk  smdsdd_full.dsk  smdssd_fmt.dsk  smdssd_full.dsk  smssdd_fmt.dsk  smssdd_full.dsk  smsssd_dirs.dsk  smsssd_fmt.dsk  smsssd_full.dsk
src/test_disks/tmp/: filename.com
test_output/: conv.dir
tests/: run_test.sh  test_filename_conversion.sh  test_format.sh
